src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #FFFDF7;
  --foreground: #171717;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

body, html {
  @apply m-0 p-0 h-full relative;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.bounce {
  position: absolute;
  animation: bounce 500ms forwards;
}

.bounce-out {
  position: absolute;
  animation: bounce-out 500ms forwards;
}

@keyframes bounce {
  0% { transform: translateX(0); }
  30% { transform: translateX(50px); }
  100% { transform: translateX(-100vw); }
}

@keyframes bounce-out {
  0% { transform: translateX(-100vw); }
  30% { transform: translateX(50px); }
  100% { transform: translateX(0); }
}

.bounce-up {
  position: absolute;
  animation: bounce-up 500ms forwards ease-in-out;
}

.bounce-down {
  position: absolute;
  animation: bounce-down 200ms forwards ease-in-out;
}

@keyframes bounce-up {
  0% {
    transform: translateY(100vh);
  }
  40% { 
    transform: translateY(45%); 
  }
  60% { 
    transform: translateY(55%); 
  }
  80% { 
    transform: translateY(48%); 
  }
  100% {
    transform: translateY(50%);
  }
}

@keyframes bounce-down {
  0% {
    transform: translateY(50%);
  }
  80% { 
    transform: translateY(100vh); 
  }
  100% {
    transform: translateY(100vh);
  }
}

.project-detail__container {
  .slick-dots {
    li {
      @apply !m-0;
    }
  }

  .slick-prev {
    @apply z-10 left-1;
  }

  .slick-next {
    @apply z-10 right-1;
  }
}

